--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <div class="logo">
-            Header Logo
+            Cat Logo
         </div>
         <nav>
             <ul>
-                <li><a href="#">Header link 1</a></li>
-                <li><a href="#">Header link 2</a></li>
-                <li><a href="#">Header link 3</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Resources</a></li>
             </ul>
         </nav>
     </header>
@@ -24,54 +24,52 @@
         <div class="section main">
             <div class="hero-text">
                 <h1 class="hero-main-text">
-                    This website is awesome
+                    Cat Newsletter
                 </h1>
                 <p class="secondary-text">
-                    This website has some subtext that goes here under the main title. 
-                    It's a smaller font and the color is lower contrast
+                    This is a non-profit organization. Prohibition of trading acts.
                 </p>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="This is a placeholder for an image">
+            <img src="./images/cat-main.jpg" alt="This is a placeholder for an image">
         </div>
         <div class="section info">
-            <h2>Some random information</h2>
+            <h2>Hot News Today</h2>
             <div class="container">
                 <div class="card">
-                    <img src="" alt="Nothing">
-                    <p>this is some subtext under an illustration or image</p>
+                    <img src="./images/cute-cat.jpg" alt="Cute cat">
+                    <figcaption>Cute cat</figcaption>
                 </div>
                 <div class="card">
-                    <img src="" alt="Nothing">
-                    <p>this is some subtext under an illustration or image</p>
+                    <img src="./images/beautiful-cat.jpg" alt="Double beatiful cat">
+                    <figcaption>Double beautiful cat</figcaption>
                 </div>
                 <div class="card">
-                    <img src="" alt="Nothing">
-                    <p>this is some subtext under an illustration or image</p>
+                    <img src="./images/cool-cat.jpg" alt="Cool cat">
+                    <figcaption>Cool cat</figcaption>
                 </div>
                 <div class="card">
-                    <img src="" alt="Nothing">
-                    <p>this is some subtext under an illustration or image</p>
+                    <img src="./images/blonde-cat.jpg" alt="Blond cat">
+                    <figcaption>Blonde cat</figcaption>
                 </div>
             </div>
         </div>
         <div class="section quote">
-            <q>This is an inspiring quote, or a testimonial from a customer. 
-                Maybe it's just filling up space, or maybe people will actually read it.
-                Who knows? All I know is that it looks nice.
+            <q>
+                Of all things God created, from sunrises and rainbows, to black holes and humor, cats are the most fascinating to me.
             </q>
-            <p><strong>-Thor, God of Thunder</strong></p>
+            <p>- Jarod Kintz</p>
         </div>
         <div class="section action">
             <div class="container">
                 <div class="signup">
                     <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <p>Sign up now to receive the latest news by clicking that button right over there!</p>
                 </div>
                 <button class="btn">Sign up</button>
             </div>
         </div>
     </main>
-    <footer>Copyright © The Odin Project 2021</footer>
+    <footer>Copyright © Neun Project</footer>
 </body>
 </html>
